--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 20
   order_by: -date
 
 # Category & Tag
@@ -88,7 +88,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 20
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -106,5 +106,5 @@ theme: kiss
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repository: git@github.com:hokkien-writing/hokkien-writing.github.io.git
+  repository: git@hokkien:hokkien-writing/hokkien-writing.github.io.git
   branch: release
