--- a/_config.kiss.yml
+++ b/_config.kiss.yml
@@ -8,7 +8,7 @@ menu:
 excerpt_link: 繼續閱讀
 
 # Banner
-banner: "https://tsunhua.github.io/banner.jpg"
+banner: "https://hokkien-writing.github.io/banner.jpg"
 
 # Sidebar
 sidebar: right
