--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 閩南語書寫
-subtitle: ''
-description: ''
+title: 書寫閩南語
+subtitle: 'HOKKIEN WRITING'
+description: '閩南語 潮州話 汕頭話 海豐話'
 keywords:
 author: Lim
 language:
