Update title & description

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 書寫閩南語
+title: 閩南語書寫
 subtitle: 'HOKKIEN WRITING'
-description: '閩南語 潮州話 汕頭話 海豐話'
+description: '閩南語 潮州話 廈門話 臺語 漳州話 泉州話 汕頭話 揭陽話 潮汕話 海豐話'
 keywords:
 author: Lim
 language:
