--- a/_config.kiss.yml
+++ b/_config.kiss.yml
@@ -1,14 +1,19 @@
 # Header
 menu:
   頭頁: /
-  相輔: https://github.com/hokkien-writing
-  簡明潮州白話字: /simple_puj
-  工具冊: 
+  相輔:
+    簡明潮州白話字: /simple_puj
+    潮州話拍字方案 (beta): /rime_teochew
+    潮州話詞庫 (beta): /teochew_lexicon
+#    潮州話同音字表 (beta): /teochew_homophone_list
+#    潮州話怎呢呾？(beta): /teochew_mandarin
+  工具冊:
     臺灣閩南語常用詞辭典: /holodict
     汕頭話讀本: /Handbook_of_the_Swatow_Vernacular
     汕頭方言音義字典: /A_Pronouncing_and_Defining_Dictionary_of_the_Swatow_Dialect
     英漢汕頭方言口語詞典: /English-Chinese_Vocabulary_of_the_Vernacular_Or_Spoken_Language_of_Swatow
     漢英潮州方言字典: /A_Chinese_and_English_vocabulary,_in_the_Tie-chiu_dialect
+  GitHub: https://github.com/hokkien-writing
 
 
 # Content
