--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "hexo generate",
+    "gs": "hexo g; hexo s",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server"
