--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/kiss"]
 	path = themes/kiss
-	url = git@github_main:tsunhua/hexo-theme-kiss.git
+	url = git@github.com:tsunhua/hexo-theme-kiss.git
