--- a/_config.kiss.yml
+++ b/_config.kiss.yml
@@ -7,7 +7,7 @@ menu:
     潮州話同音字表 (beta): /teochew_homophone_list
     潮州話詞庫 (beta): /teochew_lexicon
     同文輸入法伴潮州話拍字方案: /trime_with_teochew
-  #    潮州話怎呢呾？(beta): /teochew_mandarin
+    潮州話怎呢呾？(beta): /teochew_mandarin
   工具冊:
     臺灣閩南語常用詞辭典: /holodict
     汕頭話讀本: /Handbook_of_the_Swatow_Vernacular
